--- a/src/styles.less
+++ b/src/styles.less
@@ -3,19 +3,20 @@ body {
 	font-size: 18px;
 	margin: 0px;
 	padding: 0px;
-	height: 100%;
 
     .container {
-    	width: 1100px;
+    	width: 1000px;
     	margin: 0 auto;
-    	border-left: 2px solid #000;
-    	border-right: 2px solid #000;
-    	padding: 0px 30px;
+    	border-left: 1px solid #000;
+    	border-right: 1px solid #000;
+    	padding: 30px 30px;
     }
+
     .table {
-    	border: 1px solid #000;
-    	box-shadow: 0 0 10px rgba(0,0,0,0.7);
+    	// border: 1px solid #000;
+    	box-shadow: 0 0 5px rgba(0,0,0,0.7);
     }
+
     header {
     	background-color: #DDD;
     	border-bottom: 2px solid #000;
@@ -41,72 +42,75 @@ body {
             }
         }
     }
-    .selectors {
-    	margin: 20px 0px;
-    	float: left;
-    }
-    .search_field {
-    	margin: 20px 0px;
-    	float: right;
-    }
+    // .selectors {
+    // 	margin: 20px 0px;
+    // 	float: left;
+    // }
+    // .search_field {
+    // 	margin: 20px 0px;
+    // 	float: right;
+    // }
     table {
-    	padding: 20px;
+    	// padding: 20px;
     	border-collapse: collapse;
         tr td {
             text-align: center;
             border: 1px solid #000;
             img {
-                height: 60px;
+                height: 90px;
             }
         }
     }
-    .trmain {
-    	font-weight: bold;
-    }
-    section:before,
-    section:after {
-      	content: "";
-      	display: table;
-    }
-    section:after {
-      	clear: both;
-    }
-    section {
-      	zoom: 1; /* For IE 6/7 (trigger hasLayout) */
-    }
-    button {
-    	margin: 0;
-    	box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    	border-radius: 10px;
-    }
-    .page {
-    	margin: 20px 0px;
-    	float: right;
-    }
+    // .trmain {
+    // 	font-weight: bold;
+    // }
+    // section:before,
+    // section:after {
+    //   	content: "";
+    //   	display: table;
+    // }
+    // section:after {
+    //   	clear: both;
+    // }
+    // section {
+    //   	zoom: 1; /* For IE 6/7 (trigger hasLayout) */
+    // }
+    // button {
+    // 	margin: 0;
+    // 	box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    // 	border-radius: 10px;
+    // }
+    // .page {
+    // 	margin: 20px 0px;
+    // 	float: right;
+    // }
     footer {
-    	background-color: #DDD;
+        div {
+            padding: 20px 0px;
+        }
+        color: #000;
+        background-color: #DDD;
     	border-top: 2px solid #000;
     	text-align: center;
-    	padding: 20px 0px;
     }
-    input {
-    	border-radius: 10px;
-    	box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    }
-    select {
-    	border-radius: 10px;
-    	box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    }
-    button:hover {
-    	background-color: #AAA;
-    }
-    select:hover {
-    	box-shadow: 0 0 10px rgba(0,0,0,1);
-    }
-    .sfield:hover {
-    	background-color: #AAA;
-    }
-    .sbutton:hover {
-    	box-shadow: 0 0 10px rgba(0,0,0,1);
-    }
+    // input {
+    // 	border-radius: 10px;
+    // 	box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    // }
+    // select {
+    // 	border-radius: 10px;
+    // 	box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    // }
+    // button:hover {
+    // 	background-color: #AAA;
+    // }
+    // select:hover {
+    // 	box-shadow: 0 0 10px rgba(0,0,0,1);
+    // }
+    // .sfield:hover {
+    // 	background-color: #AAA;
+    // }
+    // .sbutton:hover {
+    // 	box-shadow: 0 0 10px rgba(0,0,0,1);
+    // }
 }
