--- a/src/styles.less
+++ b/src/styles.less
@@ -4,6 +4,27 @@ body {
 	margin: 0px;
 	padding: 0px;
 
+    .btn {
+        float:  right;
+        color: #000;
+    }
+
+    .btn:hover{
+        background-color: #CCC;
+        box-shadow: 0 0 5px rgba(0,0,0,0.7);
+    }
+
+    .label {
+        font-size: 20px;
+    }
+
+    .decor {
+        text-align: center;
+        font-size: 20px;
+        float: left;
+
+    }
+
     .container {
     	width: 1000px;
     	margin: 0 auto;
